<resources>
    <string name="app_name">Swapnil\'s Food</string>
    <string name="mobile_number">Mobile Number(10 digits)</string>
    <string name="password">Password</string>
    <string name="log_in">Log In</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="don_t_have_an_account_sign_up_now">Don\'t have an Account? Sign up now</string>
    <string name="todo">TODO</string>
    <string name="mobilenumber_email">Enter your register mobile number and email below:</string>
    <string name="email">Email</string>
    <string name="next">Next</string>
    <string name="back">back</string>
    <string name="register_yourself">Register Yourself</string>
    <string name="mobile_number_10_digits">Mobile Number(10 digits)</string>
    <string name="name">Name(min 3 characters)</string>
    <string name="delivery_address">Delivery Address</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="register">Register</string>
</resources>