<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ForgotPasswordActivity"
    android:background="#D70F64">

    <ImageView
        android:id="@+id/imgFoodLogo"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:src="@drawable/food_app_logo"
        android:layout_centerHorizontal="true"
        android:padding="6dp"
        android:layout_margin="20dp"
        android:contentDescription="@string/todo" />

    <TextView
        android:id="@+id/txtMobileNumberEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/mobilenumber_email"
        android:layout_below="@+id/imgFoodLogo"
        android:textSize="18sp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:textColor="#ffffff"/>

    <EditText
        android:id="@+id/etMobileNumber"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_below="@+id/txtMobileNumberEmail"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:autofillHints="0000000000"
        android:background="#ffffff"
        android:backgroundTint="#ffffff"
        android:hint="@string/mobile_number"
        android:inputType="phone"
        android:maxLength="10"
        android:paddingStart="30dp"
        android:textColorHint="@color/black"
        tools:ignore="RtlSymmetry" />

    <EditText
        android:id="@+id/etEmail"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_below="@+id/etMobileNumber"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="15dp"
        android:layout_marginRight="20dp"
        android:autofillHints="Email"
        android:background="#ffffff"
        android:backgroundTint="#ffffff"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:paddingStart="30dp"
        android:textColorHint="@color/black"
        tools:ignore="RtlSymmetry" />

    <Button
        android:id="@+id/btnNext"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_below="@+id/etEmail"
        android:layout_marginTop="15dp"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:padding="6dp"
        android:backgroundTint="#880e4f"
        android:text="@string/next"
        android:textSize="18sp"
        android:textStyle="bold"/>

</RelativeLayout>