<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity"
    android:background="#D70F64">

    <ImageView
        android:id="@+id/imgPrev"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:src="@drawable/ic_back_arrow"
        android:layout_margin="10dp"/>

    <TextView
        android:id="@+id/txtRegisterYourself"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:text="@string/register_yourself"
        android:textSize="23sp"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:textStyle="bold"/>

    <LinearLayout
        android:id="@+id/layoutLinear"
        android:layout_width="match_parent"
        android:layout_height="340dp"
        android:layout_below="@+id/txtRegisterYourself"
        android:layout_marginTop="20dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/etName"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:autofillHints="0000000000"
            android:background="#ffffff"
            android:backgroundTint="#ffffff"
            android:hint="@string/name"
            android:inputType="text"
            android:paddingStart="30dp"
            android:textColorHint="@color/black"
            tools:ignore="RtlSymmetry"
            android:drawableStart="@drawable/ic_person"
            android:drawablePadding="5dp"
            />

        <EditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="20dp"
            android:autofillHints="Password"
            android:background="#ffffff"
            android:backgroundTint="#ffffff"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:paddingStart="30dp"
            android:textColorHint="@color/black"
            tools:ignore="RtlSymmetry"
            android:drawableStart="@drawable/ic_email"
            android:drawablePadding="5dp"/>



        <EditText
            android:id="@+id/etMobileNumber"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="20dp"
            android:autofillHints="0000000000"
            android:background="#ffffff"
            android:backgroundTint="#ffffff"
            android:hint="@string/mobile_number"
            android:inputType="phone"
            android:maxLength="10"
            android:paddingStart="30dp"
            android:textColorHint="@color/black"
            tools:ignore="RtlSymmetry"
            android:drawableStart="@drawable/ic_baseline_phone_android_24"
            android:drawablePadding="5dp"
            />

        <EditText
            android:id="@+id/etDeliveryAddress"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="20dp"
            android:autofillHints="0000000000"
            android:background="#ffffff"
            android:backgroundTint="#ffffff"
            android:hint="@string/delivery_address"
            android:inputType="textPostalAddress"
            android:paddingStart="30dp"
            android:textColorHint="@color/black"
            tools:ignore="RtlSymmetry"
            android:drawableStart="@drawable/ic_location"
            android:drawablePadding="5dp"/>

        <EditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="20dp"
            android:autofillHints="Password"
            android:background="#ffffff"
            android:backgroundTint="#ffffff"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:paddingStart="30dp"
            android:textColorHint="@color/black"
            tools:ignore="RtlSymmetry"
            android:drawableStart="@drawable/ic_baseline_lock_24"
            android:drawablePadding="5dp"/>

        <EditText
            android:id="@+id/etConfirmPassword"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="20dp"
            android:autofillHints="Password"
            android:background="#ffffff"
            android:backgroundTint="#ffffff"
            android:hint="@string/confirm_password"
            android:inputType="textPassword"
            android:paddingStart="30dp"
            android:textColorHint="@color/black"
            tools:ignore="RtlSymmetry"
            android:drawableStart="@drawable/ic_baseline_lock_24"
            android:drawablePadding="5dp"/>

    </LinearLayout>

    <Button
        android:id="@+id/btnRegister"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_below="@id/layoutLinear"
        android:layout_margin="20dp"
        android:backgroundTint="#880e4f"
        android:text="@string/register"
        android:textSize="18sp"
        android:textStyle="bold"
        android:padding="6dp"
        />

  </RelativeLayout>